# aether-core

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF_2026-05-01_eod.md  HANDOFF_2026-05-01_substrate_v014.md  HANDOFF_2026-05-01_to_windows.md  HANDOFF_2026-05-01_to_windows_late.md  LICENSE  NEXT_SESSION.md  README.md  ROADMAP.md  SESSION_2026-05-01_archaeology_and_tier1.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/plans/: fill-placeholders.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  tests.yml
aether/: __init__.py  _lazy_encoder.py  cli.py  patterns.py
aether/contradiction/: __init__.py  mutex.py  nli.py  tension.py
aether/crt/: __init__.py  core.py  fact_checker.py
aether/epistemics/: __init__.py  backprop.py
aether/governance/: __init__.py  continuity_auditor.py  layer.py  premature_resolution_guard.py  speech_leak_detector.py  template_detector.py
aether/integrations/: __init__.py  config.py  crt.py
aether/mcp/: __init__.py  __main__.py  server.py  state.py
aether/memory/: __init__.py  auto_ingest.py  graph.py  llm_extract.py  slots.py
aether/predictive/: __init__.py  splats.py  substrate_adapter.py
aether/substrate/: __init__.py  migrate.py  slots.py
aether/topology/: __init__.py  persistent_homology.py  substrate_adapter.py
bench/: README.md  fidelity_corpus.json  lab_a_slot_induction_probe.md  lab_a_v2_production_substrate_findings.md  phase_b_verify.py  run_contradiction_bench.py  run_fidelity_bench.py  slot_coverage_gpt_corpus.py  slot_coverage_results.json  slot_drift_results.json  slot_value_drift_gpt_corpus.py  smoke_v131.py  validation_test1.py  validation_test1_questions.json
bench/results/: .gitignore  contradiction_bench_2026-05-01_structural_only.md  (+2 more)
commands/: aether-check.md  aether-contradictions.md  aether-correct.md  aether-ingest.md  aether-init.md  aether-path.md  aether-search.md  aether-status.md
crt/: __init__.py
examples/: 01_quickstart.py  02_full_pipeline.py  README.md
hooks/: aether_launcher.py  hooks.json  session_start.py
labs/: red_team_governance.py
tests/: test_backprop.py  test_cli_v07.py  test_crt_port.py  test_encoder_nonblocking.py  test_extractor_clause_and_question.py  test_fact_checker_port.py  test_governance.py  test_graph.py  test_mcp.py  test_mcp_substrate.py  test_mcp_v05.py  test_mcp_v06.py  test_path_v09.py  test_predictive_splats.py  test_public_surface.py  test_quote_mention_bug.py  test_slots.py  test_state_stats_lazy.py  test_substrate_v014.py  test_tension.py  test_topology.py  test_v091_auto_link.py  test_v092_governance_nonblocking.py  test_v093_methodological_overclaim.py  test_v094_fidelity_calibration.py  test_v095_cold_encoder_path.py  test_v100_action_receipts.py  test_v101_save_load_metadata_collision.py  test_v110_pattern_primitives.py  test_v120_slot_equality_and_local_context.py  test_v1210_backup_rotation.py  test_v1211_doctor_report.py  test_v1212_warmup_cli.py  test_v1213_default_policy_beliefs.py  test_v1214_layman_onboarding.py  test_v1215_bootstrap.py  test_v1217_contradiction_bench.py  test_v1218_launcher_and_pep668.py  test_v1221_polarity_and_overlap.py  test_v122_policy_contradiction_extended.py  (+11 more)
(+21 files in other folders)
