[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crt-core"
version = "0.2.0"
description = "Epistemic governance framework for AI systems — trust-weighted memory, contradiction detection, belief/speech separation, and immune agent governance."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nick Block"},
]
requires-python = ">=3.10"
keywords = ["ai", "governance", "epistemics", "trust", "contradiction", "memory", "belief"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
graph = ["networkx>=3.0"]
ml = ["sentence-transformers>=2.2"]
all = ["networkx>=3.0", "sentence-transformers>=2.2"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/blockhead22/crt-core"
Documentation = "https://github.com/blockhead22/crt-core#readme"
Repository = "https://github.com/blockhead22/crt-core"
Issues = "https://github.com/blockhead22/crt-core/issues"

[tool.setuptools.packages.find]
include = ["crt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
