[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-core"
version = "0.6.0"
description = "Belief substrate for AI systems — persistent, contradiction-aware trust state that outlives any single model. The model is the mouth, the substrate is the self."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nick Block"},
]
requires-python = ">=3.10"
keywords = ["ai", "belief-substrate", "governance", "epistemics", "trust", "contradiction", "memory", "belief", "cascade", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
graph = ["networkx>=3.0"]
ml = ["sentence-transformers>=2.2"]
mcp = ["mcp>=1.0"]
all = ["networkx>=3.0", "sentence-transformers>=2.2", "mcp>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
aether-mcp = "aether.mcp.server:run"

[project.urls]
Homepage = "https://github.com/blockhead22/aether-core"
Documentation = "https://github.com/blockhead22/aether-core#readme"
Repository = "https://github.com/blockhead22/aether-core"
Issues = "https://github.com/blockhead22/aether-core/issues"

[tool.setuptools.packages.find]
include = ["aether*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
